// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepted file type should be csv 1`] = `
<ReactFileReader
  base64={false}
  disabled={false}
  elementId="test-render"
  fileTypes=".csv"
  handleFiles={[Function]}
  multipleFiles={false}
>
  <div
    className="react-file-reader"
  >
    <input
      accept=".csv"
      className="react-file-reader-input"
      disabled={false}
      id="test-render"
      multiple={false}
      onChange={[Function]}
      style={
        Object {
          "opacity": "0",
          "position": "fixed",
          "width": "0px",
        }
      }
      type="file"
    />
    <div
      className="react-file-reader-button"
      onClick={[Function]}
    >
      <p>
        Upload
      </p>
    </div>
  </div>
</ReactFileReader>
`;

exports[`accepted file type should be csv or image/* 1`] = `
<ReactFileReader
  base64={false}
  disabled={false}
  elementId="test-render"
  fileTypes={
    Array [
      ".csv",
      "image/*",
    ]
  }
  handleFiles={[Function]}
  multipleFiles={false}
>
  <div
    className="react-file-reader"
  >
    <input
      accept=".csv,image/*"
      className="react-file-reader-input"
      disabled={false}
      id="test-render"
      multiple={false}
      onChange={[Function]}
      style={
        Object {
          "opacity": "0",
          "position": "fixed",
          "width": "0px",
        }
      }
      type="file"
    />
    <div
      className="react-file-reader-button"
      onClick={[Function]}
    >
      <p>
        Upload
      </p>
    </div>
  </div>
</ReactFileReader>
`;

exports[`accepts multiple files 1`] = `
<ReactFileReader
  base64={false}
  disabled={false}
  elementId="test-render"
  fileTypes="image/*"
  handleFiles={[Function]}
  multipleFiles={true}
>
  <div
    className="react-file-reader"
  >
    <input
      accept="image/*"
      className="react-file-reader-input"
      disabled={false}
      id="test-render"
      multiple={true}
      onChange={[Function]}
      style={
        Object {
          "opacity": "0",
          "position": "fixed",
          "width": "0px",
        }
      }
      type="file"
    />
    <div
      className="react-file-reader-button"
      onClick={[Function]}
    >
      <p>
        Upload
      </p>
    </div>
  </div>
</ReactFileReader>
`;

exports[`returns base64 image 1`] = `
<ReactFileReader
  base64={true}
  disabled={false}
  elementId="test-render"
  fileTypes="image/*"
  handleFiles={[Function]}
  multipleFiles={false}
>
  <div
    className="react-file-reader"
  >
    <input
      accept="image/*"
      className="react-file-reader-input"
      disabled={false}
      id="test-render"
      multiple={false}
      onChange={[Function]}
      style={
        Object {
          "opacity": "0",
          "position": "fixed",
          "width": "0px",
        }
      }
      type="file"
    />
    <div
      className="react-file-reader-button"
      onClick={[Function]}
    >
      <p>
        Upload
      </p>
    </div>
  </div>
</ReactFileReader>
`;

exports[`the base component renders 1`] = `
<ReactFileReader
  base64={false}
  disabled={false}
  elementId="test-render"
  fileTypes="image/*"
  handleFiles={[Function]}
  multipleFiles={false}
>
  <div
    className="react-file-reader"
  >
    <input
      accept="image/*"
      className="react-file-reader-input"
      disabled={false}
      id="test-render"
      multiple={false}
      onChange={[Function]}
      style={
        Object {
          "opacity": "0",
          "position": "fixed",
          "width": "0px",
        }
      }
      type="file"
    />
    <div
      className="react-file-reader-button"
      onClick={[Function]}
    >
      <p>
        Upload
      </p>
    </div>
  </div>
</ReactFileReader>
`;
